[package]
name = "iterativ"
version = "0.1.0"
authors = ["Ash <relativistic.policeman@gmail.com>"]
edition = "2018"

[dependencies]
quicksilver = { version = "0.3", default-features = false, features = ["fonts", "immi_ui", "saving"] }
stdweb = "0.4"
derive_more = "*"
specs = { version = "0.15", default-features = false, features = ["specs-derive", "nightly"] }
log = "0.4"
textwrap = "0.11"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = "0.2"
