[package]
name = "iterativ"
version = "0.1.0"
authors = ["Ash <relativistic.policeman@gmail.com>"]
edition = "2018"

[dependencies]
quicksilver = { version = "0.4.0-alpha0.6", default-features = false, features = ["easy-log", "font", "saving", "ttf"] }
stdweb = "0.4"
derive_more = "*"
specs = { version = "0.15", default-features = false, features = ["specs-derive"]}
log = "0.4"
